fixes issue with conditions for reserving items